[tool.poetry]
name = "computation-la"
version = "0.1.0"
description = ""
authors = ["joelraymann <joelraymann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
pandas = "^1.1.1"
numba = "^0.51.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
